--- a/deep-learning.html
+++ b/deep-learning.html
@@ -98,7 +98,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Deep Learning Engineer at Plumerai.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691933292-internship-deep-learning-for-the-dynamic-object-detection-for-autonomous-driving'>Bosch Group Internship Deep Learning For The Dynamic Object Detection For Autonomous  Driving | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691933292-internship-deep-learning-for-the-dynamic-object-detection-for-autonomous-driving'>Bosch Group Internship Deep Learning For The Dynamic Object Detection For Autonomous  Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Stuttgart, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -122,7 +122,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -170,7 +170,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oM5D9fwn'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Sr. Deep Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -195,11 +195,11 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/paperspace/a3633631-f68f-487d-82cb-7376265696f2'>Paperspace - Deep Learning Technical Writer (project based)</a></h5> 
+<h5><a href='https://jobs.lever.co/paperspace/a3633631-f68f-487d-82cb-7376265696f2'>Paperspace - Deep Learning Technical Writer (project based)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
-<h5><a href='http://samasource.applytojob.com/apply/zg64yWYMZM/Head-Of-Artificial-Intelligence-And-Deep-Learning'>Head of Artificial Intelligence and Deep Learning - Samasource - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://samasource.applytojob.com/apply/zg64yWYMZM/Head-Of-Artificial-Intelligence-And-Deep-Learning'>Head of Artificial Intelligence and Deep Learning - Samasource - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-21</p>
 <hr/>
@@ -316,7 +316,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-05-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/oHb49fwP'>Logitech Careers - Automated Visual Inspection Intern with Deep Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/logitech/job/oHb49fwP'>Logitech Careers - Automated Visual Inspection Intern with Deep Learning</a></h5> 
 <p><span class="badge badge-light">Hsinchu</span></p>
 <p>Posted on: 2019-05-14</p>
 <hr/>
@@ -384,7 +384,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -440,7 +440,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615738/'>Deep Learning Engineer, Core Modeling in Lviv | Open position | DataRobot</a></h5> 
+<h5><a href='https://www.datarobot.com/careers/job/1615738/'>Deep Learning Engineer, Core Modeling in Lviv | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
