--- a/android-developer.html
+++ b/android-developer.html
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oTFg8fwG'>The Havas Group Careers - Senior Android Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oTFg8fwG'>The Havas Group Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -157,7 +157,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/b94b20cd-1531-48b6-85f6-a511bf679ab1'>3Pillar Global - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/3pillarglobal/b94b20cd-1531-48b6-85f6-a511bf679ab1'>3Pillar Global - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -169,7 +169,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -379,7 +379,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Halifax, NS</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://REDspace.recruiterbox.com/jobs/fk0366y'>
+<h5><a href='http://REDspace.recruiterbox.com/jobs/fk0366y'>
     Android Developer at REDspace
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -409,7 +409,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Ann Arbor, MI, USA</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-android-developer-dsgAbMNAir6Af6aICoXfFy'>Senior Android Developer #0113 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-android-developer-dsgAbMNAir6Af6aICoXfFy'>Senior Android Developer #0113 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
