Job Application for Sr. Software Engineer, Android   at Fender. ServiceNow Careers - Senior Software Engineer. J2 Global Careers - Senior Software Engineer - Java. Northcentral University Careers - Jr. Software Developer. Job Application for Software Engineering Manager at LogDNA. Avant - Senior Software Engineer, DevOps (Remote Ok). GBM Head of Software Engineering (Client Services Platform) | SmartRecruiters. GBM Head of Software Engineering (Financial Services Platform) | SmartRecruiters. Incorta - Senior Software Engineer. Software Engineer, Robotics - Bossanova Robotics - Career Page. Software Engineer, Robot Middleware - Bossanova Robotics - Career Page. Software Engineer, Robot Build and Release - Bossanova Robotics - Career Page. Software Engineer, Robot Reliability and Testing - Bossanova Robotics - Career Page. Contract Technical Recruiter, Software Engineering - Bossanova Robotics - Career Page. Job Application for Lead Software Engineer - Data Pod at Omaze. Software Developer – Electronic products - Itron Careers. Tenable Careers - Software Engineer. Job Application for Lead Software Engineer, Onboard Platforms at Argo AI. Job Application for Software Engineer in Test, Embedded Systems at Argo AI. Job Application for Lead Software Engineer, Simulation at Argo AI. Ancestry - Senior Software Engineer, Front-end. Visa Sr. Software Engineer- EVG | SmartRecruiters. CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters. Visa Senior Software Engineer, DFM - Visa Digital Developer Platform (VDDP) | SmartRecruiters. Job Application for Senior Software Engineer - Mobile at TWG.     Senior Software Developer at LogiNext . Senior Software Engineer - Back and/or Front-End (Local or Remote) - PowerDMS - Career Page. Senior Software Engineer: Ruby-on-Rails | Averity.       Senior Software Engineer, Data (EMEA) - Hotjar     . Software Engineer (9279803) - PRO Unlimited @ Facebook - Career Page. Firmware Software Engineer IV - PRO Unlimited @ Facebook - Career Page

--- a/software.html
+++ b/software.html
@@ -99,11 +99,11 @@
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/software-developer-%E2%80%93-electronic-products-2681'>Software Developer ? Electronic products - Itron Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/software-developer-%E2%80%93-electronic-products-2681'>Software Developer ? Electronic products - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oNoO9fwS&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=n7lVVLwy'>Tenable Careers - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oNoO9fwS&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=n7lVVLwy'>Tenable Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -235,7 +235,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -357,7 +357,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/58BE190F73'>SmartNews, Inc. - Jobs: Staff Software Engineer, AI Infrastructure - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/58BE190F73'>SmartNews, Inc. - Jobs: Staff Software Engineer, AI Infrastructure - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -381,11 +381,11 @@
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/idt/d46403cc-d3aa-41b8-9ed8-999a7200e354'>IDT - Lead Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/idt/d46403cc-d3aa-41b8-9ed8-999a7200e354'>IDT - Lead Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
+<h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -401,7 +401,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/kustomer/jobs/1793272'>Job Application for Software Engineer in Test at Kustomer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kustomer/jobs/1793272'>Job Application for Software Engineer in Test at Kustomer</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -425,12 +425,12 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Senior Software Engineer at Crossbeam.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Software Engineer Machine Learning (m/f/d) at 
 riskmethods.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aire.workable.com/j/7F962DF40C'>Application Software Engineer - Apply online - Aire - Jobs</a></h5> 
+<h5><a href='https://aire.workable.com/j/7F962DF40C'>Application Software Engineer - Apply online - Aire - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Application Software Engineer at Aire.</p>
 <hr/>
